--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p PoC - Node 14 LTS : #{title} : V2.2
+  p  NodeJS App deployed on App Service Linux : #{title} : V2.3
