--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p  NodeJS App deployed on App Service Linux : #{title} : V2.5
+  p  NodeJS App deployed on App Service Linux : #{title} powered by OA
+  p  V2.6
